--- a/SECCCU/SECCCU/SECCCU.csproj
+++ b/SECCCU/SECCCU/SECCCU.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reader.cs" />
+    <Compile Include="Report.cs" />
     <Content Include="ScanInput.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -99,6 +100,7 @@
     <Content Include="csvFiles\rooms.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="ClassDiagram.cd" />
     <None Include="packages.config" />
     <Content Include="csvFiles\programmes.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
